src/objects/CR_Component__c.object
<CustomObject>
    <description>Major systems and sub system components Impacted by this change. A subset of project components</description>
    <fields>
        <fullName>Change_Request__c</fullName>
        <label>Change Request</label>
        <referenceTo>Change_Request__c</referenceTo>
        <relationshipLabel>CR Components</relationshipLabel>
        <relationshipName>CR_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_ID__c</fullName>
        <formula>Project_Component__r.Chatter_Group_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Group_Name__c</fullName>
        <formula>Project_Component__r.Chatter_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chatter_Link__c</fullName>
        <formula>Project_Component__r.Chatter_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chatter Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Component</label>
        <referenceTo>Project_Component__c</referenceTo>
        <relationshipLabel>CR Components</relationshipLabel>
        <relationshipName>CR_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CR Component</label>
    <nameField>
        <label>CR Components Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CR Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>